1.Created models. 2.Created Servies. and Implementated.3.Added  ErrorHandlerMiddleware. 4.Created Automapper. 5.Create EndPoints.

--- a/TaskVacancy/TaskVacancy/appsettings.Development.json
+++ b/TaskVacancy/TaskVacancy/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "MsSql": "Server=localhost;Database=alifwallet;user id=sa;password=Sa12345;encrypt=false;"
   }
 }
