--- a/TaskVacancy/TaskVacancy/appsettings.json
+++ b/TaskVacancy/TaskVacancy/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MsSql": "Server=localhost;Database=alifwallet;user id=sa;password=Sa12345;encrypt=false;"
+  }
 }
