--- a/TaskVacancy/TaskVacancy/TaskVacancy.csproj
+++ b/TaskVacancy/TaskVacancy/TaskVacancy.csproj
@@ -17,6 +17,7 @@
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.30.1" />
   </ItemGroup>
 
 </Project>
